--- a/Beacons/app/src/main/AndroidManifest.xml
+++ b/Beacons/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service
+            android:name="com.example.dvg_vk.beacons.BackgroundSubscribeIntentService"
+            android:exported="false" />
     </application>
 
 </manifest>
