--- a/Beacons/app/build.gradle
+++ b/Beacons/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'org.altbeacon:android-beacon-library:2+'
     compile 'com.android.support:cardview-v7:25.3.+'
     compile 'com.android.support:recyclerview-v7:25.3.+'
+    compile 'com.android.volley:volley:1.0.0'
 }
