--- a/Beacons/app/build.gradle
+++ b/Beacons/app/build.gradle
@@ -27,8 +27,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    compile 'org.altbeacon:android-beacon-library:2+'
     compile 'com.android.support:cardview-v7:25.3.+'
     compile 'com.android.support:recyclerview-v7:25.3.+'
-    compile 'com.android.volley:volley:1.0.0'
+    compile 'org.altbeacon:android-beacon-library:2.9.2'
+    provided 'org.glassfish:javax.annotation:10.0-b28'
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
