--- a/Beacons/app/src/main/AndroidManifest.xml
+++ b/Beacons/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:value="AIzaSyCm3NprXRMhYkcV8defFeHyHRAZjstNVdU" />
         <activity android:name=".MainActivity"
             android:label="@string/app_name"
-            >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
